Fixed alignment

--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -22,10 +22,6 @@ body {
   position: absolute;
 }
 
-.left {
-  text-align: left;
-}
-
 [class^="container"] {
   margin-left: auto;
   margin-right: auto;
