--- a/src/styles/_type.scss
+++ b/src/styles/_type.scss
@@ -37,6 +37,18 @@ a {
   text-align: left;
 }
 
-.center--resp {
+.left--resp {
+  @media only screen and (max-width: $breakpoint-desk) {
+    text-align: left;
+  }
+}
+
+.center {
   text-align: center;
+}
+
+.center--resp {
+  @media only screen and (max-width: $breakpoint-desk) {
+    text-align: center;
+  }
 }
